# MLB-Simulation

./: .gitignore  2016-2022 Pitch Collection.ipynb  Batting Stats (DON'T USE).ipynb  Building Data Sets.ipynb  Building Datasets.ipynb  Building_Dataset_Functions.ipynb  Creating Rolling Stats.ipynb  ML X Dataset  ML Y Dataset (On Base)  ML Y Dataset (Plays)  Making Predictions.ipynb  Neutralizing Stats I.ipynb  Neutralizing Stats.ipynb  Pitch and Weather Collection.ipynb  README.md  ToDo.html  ToDo.md  Training Models.ipynb  get_lineups.py  j.ipynb  league_averages.pkl  pyproject.toml  setup.py  thoughts.html  weather_data.pkl
.ipynb_checkpoints/: Batting Stats (DON'T USE)-checkpoint.ipynb  Building Data Sets-checkpoint.ipynb  Building Datasets-checkpoint.ipynb  Building_Dataset_Functions-checkpoint.ipynb  Making Predictions-checkpoint.ipynb  Neutralizing Stats I-checkpoint.ipynb  Pitch and Weather Collection-checkpoint.ipynb  Training Models-checkpoint.ipynb
Data/: lineups
MLB_game_simulation.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Outside Info Files/: Ballpark Info.xlsx
Python Files/: Batting Stats (DON'T USE).ipynb  Building Training Datasets.ipynb  Daily MLB Data Collection.ipynb  Game Simulation.ipynb  Pitch_and_Weather_Collection_Functions.ipynb  Training Models.ipynb  constants.py  functions.py
build_datasets/: build_datasets.py  build_datasets_copy.py  build_datasets_old.py  dataset_builder.py  run.py  testing.ipynb  testing.pkl  utils.py
notebooks/: model_comparison.ipynb
scripts/: Building Training Datasets.ipynb  constants.py  functions.py
(+28 files in other folders)
